[package]
name = "RASCII"
version = "0.1.0"
authors = ["commodor64", "galoz666"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
#  crossterm = "^0.10" if we wanna go crossplatform eventually?
futures = "*"
termion = "*"
tuikit = "*"
log = "0.4"
pretty_env_logger = "0.3"
counter = "0.4.3"
libmath = "0.2.1"