[package]
name = "rascii"
version = "0.1.0"
authors = ["galoz666"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
#  crossterm = "^0.10" if we wanna go crossplatform eventually?
termion = "*"
tuikit = "*"
counter = "0.4.3"
libmath = "0.2.1"
cute = "0.3.0"
ansi_term = "0.12.1"

[profile.release]
lto = true