[package]
name = "rascii"
version = "0.1.0"
authors = ["galoz666"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
counter = "0.4.3"
libmath = "0.2.1"
ansi_term = "0.12.1"

[profile.release]
lto = true